--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = "https://suspicious-booth-fced28.netlify.app"
+# baseURL = "https://suspicious-booth-fced28.netlify.app"
+baseURL = "https://darwinanddavis.netlify.app"
 languageCode = "en-us"
 title = "Matt Malishev"
 theme = "timer-hugo"
@@ -25,13 +26,14 @@ theme = "timer-hugo"
     url     = "gallery"
     weight  = 5
 [[menu.main]]
-    name    = "Contact"
-    url     = "contact"
-    weight  = 6
-[[menu.main]]
     name    = "Projects"
     url     = "portfolio"
+    weight  = 6
+[[menu.main]]
+    name    = "Contact"
+    url     = "contact"
     weight  = 7
+
 
 # Site Params
 [params]
